center menu and stop body overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,8 +33,8 @@ img.grayscale:hover {
 #nav {
   width: 100%;
   float: left;
-  margin: 1em 0;
-  padding: 0 140px;
+  margin: 0 auto;
+  padding: 2em;
   list-style: none;
   background-color: #fff;
   border-bottom: 0px solid #fff; 
